--- a/assets/css/cadastroOni.css
+++ b/assets/css/cadastroOni.css
@@ -56,7 +56,7 @@ select {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #007BFF;
+    background-color: midnightblue;
     color: white;
     border: none;
     border-radius: 5px;
@@ -72,7 +72,7 @@ button:hover {
     display: block;
     margin-top: 5px;
     font-size: 12px;
-    color: #007BFF;
+    color: midnightblue;
     text-decoration: none;
 }
 
