--- a/assets/css/cadastroUsu.css
+++ b/assets/css/cadastroUsu.css
@@ -40,6 +40,7 @@ label {
 }
 
 input[type="text"],
+input[type="senha"],
 input[type="date"],
 input[type="email"],
 textarea,
@@ -56,7 +57,7 @@ select {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #007BFF;
+    background-color: midnightblue;
     color: white;
     border: none;
     border-radius: 5px;
@@ -72,7 +73,7 @@ button:hover {
     display: block;
     margin-top: 5px;
     font-size: 12px;
-    color: #007BFF;
+    color: midnightblue;
     text-decoration: none;
 }
 
